# Project_MORPG

./: .gitignore  Project_MORPG_현재정리.txt  README.md
Assets/: UserChoices.choices
Assets/1.Scene/: CharacterSelectScene.unity  GameScene.unity  LoadingScene.unity  LoginScene.unity  SampleScene.unity
Assets/6.Materials/: Ground_Mat.mat  Player_Capsule_Mat.mat
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Assets/_Recovery/: 0.unity
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Server_CPP/: CMakeLists.txt  ProjectMORPGServer.sln  ProjectMORPGServer.vcxproj  ProjectMORPGServer.vcxproj.filters  README.md
Server_CPP/ProjectM.7F01C452/x64/Debug/: ProjectMORPGServer.exe.recipe  ProjectMORPGServer.ilk  vc143.idb
Server_CPP/ProjectM.7F01C452/x64/Debug/ProjectM.7F01C452.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ProjectMORPGServer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Server_CPP/db/: check_project_morpg_schema.sql  schema.sql
Server_CPP/db/migrations/: 001_inventory_equipment_master.sql
Server_CPP/src/: main.cpp
Server_CPP/src/domain/: AccountData.h  CharacterData.h
Server_CPP/src/net/: ClientSession.cpp  ClientSession.h  TcpServer.cpp  TcpServer.h
Server_CPP/src/protocol/: PacketCodec.cpp  PacketCodec.h
Server_CPP/src/repository/: IAccountRepository.h  MariaDbAccountRepository.cpp  MariaDbAccountRepository.h  MockAccountRepository.cpp  MockAccountRepository.h
Server_CPP/src/service/: AuthService.cpp  AuthService.h
(+151 files in other folders)
